--- a/index.html
+++ b/index.html
@@ -1,10 +1,78 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alaa El-Ebshihy - Personal Website</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+        nav { background: #333; color: #fff; padding: 1rem; text-align: center; }
+        nav a { color: white; margin: 0 10px; text-decoration: none; }
+        nav a:hover { text-decoration: underline; }
+        .container { max-width: 800px; margin: auto; padding: 20px; }
+        h1, h2 { border-bottom: 1px solid #ddd; padding-bottom: 5px; }
+        section { margin-bottom: 40px; }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Personal Website</h1>
-    <p>I'm Alaa El-Ebshihy, a Data Science Researcher and PhD student at TU Wien.</p>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#research">Research</a>
+        <a href="#teaching">Teaching</a>
+        <a href="#industry">Industry</a>
+        <a href="#activities">Activities</a>
+        <a href="#skills">Skills</a>
+        <a href="#publications">Publications</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+    </nav>
+
+    <div class="container">
+        <section id="home">
+            <h1>Welcome</h1>
+            <p>I'm Alaa El-Ebshihy, a Data Science Researcher and PhD student at TU Wien.</p>
+        </section>
+
+        <section id="research">
+            <h2>Research</h2>
+            <p>Details about my research interests and projects.</p>
+        </section>
+
+        <section id="teaching">
+            <h2>Teaching & Mentoring</h2>
+            <p>Teaching experiences and mentorship activities.</p>
+        </section>
+
+        <section id="industry">
+            <h2>Industry Experience</h2>
+            <p>Professional roles and contributions in various industries.</p>
+        </section>
+
+        <section id="activities">
+            <h2>Activities</h2>
+            <p>Organizing conferences and reviewing activities.</p>
+        </section>
+
+        <section id="skills">
+            <h2>Skills</h2>
+            <p>Programming languages, tools, and natural languages proficiency.</p>
+        </section>
+
+        <section id="publications">
+            <h2>Publications</h2>
+            <p>List of academic publications with links and details.</p>
+        </section>
+
+        <section id="news">
+            <h2>News</h2>
+            <p>Latest updates, conference participations, and achievements.</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Email: alaa.el-ebshihy@tuwien.ac.at</p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/alaa-el-ebshihy" target="_blank">My LinkedIn</a></p>
+        </section>
+    </div>
 </body>
 </html>
