--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Alaa El-Ebshihy - Personal Website</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f5f5f5; color: #333; }
-        header { background-color: #456882; color: white; text-align: center; padding: 20px; display: flex; align-items: center; justify-content: center; gap: 20px; }
+        header { background-color: #456882; color: white; text-align: center; padding: 20px; display: flex; align-items: center; justify-content: center; gap: 20px; flex-direction: column; }
         header img { border-radius: 50%; width: 100px; height: 100px; object-fit: cover; object-position: center; }
         header h1 { margin: 0; font-size: 2rem; }
+        .social-icons a { color: white; margin: 0 10px; text-decoration: none; font-size: 1.5em; }
+        .social-icons a:hover { color: #60a5fa; }
         nav { background: #333; color: #fff; padding: 1rem; text-align: center; }
         nav a { color: white; margin: 0 10px; text-decoration: none; }
         nav a:hover { color: #1B3C53; }
@@ -20,6 +22,7 @@
         .publication .title { font-weight: bold; }
         .publication .venue { font-style: italic; color: gray; }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <nav>
@@ -38,8 +41,15 @@
     <header>
         <img src="profile.png" alt="Alaa El-Ebshihy Photo">
         <h1>Alaa El-Ebshihy</h1>
-    </header>
+        <div class="social-icons">
+            <a href="mailto:alaa.el-ebshihy@tuwien.ac.at" title="Email"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/alaa-el-ebshihy" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://x.com/Alaa_Ebshihy" target="_blank" title="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://scholar.google.com/citations?user=JUtYy2MAAAAJ&hl=en" target="_blank" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+            <a href="https://github.com/Alaa-Ebshihy" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
 
+        </div>
+    </header>
 
 
     <div class="container">
